--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 
 /*----------------------------------------------------------------------------------------------------------------------
-Project:	    MyHouse
+Project:	    Ab Bank (https://abbanksuwilanji.netlify.app)
 Version:        1.0.1
 
 Default Color   #00f;
